--- a/app/src/main/res/layout/user_friend_request.xml
+++ b/app/src/main/res/layout/user_friend_request.xml
@@ -1,6 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="8dp"
+    android:background="@drawable/white_grey_border">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/face"
+        android:id="@+id/user_request_profile_image"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:id="@+id/user_request_usernameId"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:fontFamily="@font/comic_neue_bold"
+        android:layout_toEndOf="@id/user_request_profile_image"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="University"
+        android:fontFamily="@font/comic_neue_bold"
+        android:id="@+id/user_request_uniName"
+        android:textColor="@color/black"
+        android:layout_marginStart="5dp"
+        android:layout_below="@id/user_request_usernameId"
+        android:layout_toEndOf="@id/user_request_profile_image"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CourseName"
+        android:fontFamily="@font/comic_neue_bold"
+        android:layout_marginStart="5dp"
+        android:id="@+id/user_request_courseNameId"
+        android:textColor="@color/black"
+        android:layout_toEndOf="@id/user_request_uniName"
+        android:layout_below="@id/user_request_usernameId"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="courseYr"
+        android:id="@+id/user_request_courseyr"
+        android:fontFamily="@font/comic_neue_bold"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/black"
+        android:layout_below="@id/user_request_usernameId"
+        android:layout_toEndOf="@id/user_request_courseNameId"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_request_hobbies"
+        android:layout_below="@id/user_request_uniName"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/black"
+        android:layout_toEndOf="@id/user_request_profile_image"
+        android:text="Hobbies"
+        android:fontFamily="@font/comic_neue_bold"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_request_btn"
+        android:layout_marginEnd="9dp"
+        android:layout_alignTop="@id/user_request_usernameId"
+        android:layout_alignParentEnd="true"
+        android:text="Accept"
+        android:textAllCaps="false"
+        android:fontFamily="@font/comic_neue_bold"
+        app:icon="@drawable/ic_add_icon"
+        app:backgroundTint="@color/purple"
+        app:cornerRadius="19dp"
+        app:background="@drawable/btn_selector"
+        />
+
+
+
+</RelativeLayout>
