--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:singleLine="false"
         android:text="Sign In"
+        android:id="@+id/signInBtn"
         android:textAllCaps="false"
         android:textSize="20sp"
         app:cornerRadius="15dp"
