--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -9,14 +9,14 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/imageView"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_imageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="100dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:srcCompat="@drawable/ic_face"
+        android:src="@drawable/face"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,30 +27,34 @@
         android:layout_marginTop="65dp"
         android:id="@+id/addProfilePic"
         app:srcCompat="@drawable/ic_add_image"
-        app:layout_constraintEnd_toEndOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"/>
+        app:layout_constraintEnd_toEndOf="@id/profile_imageView"
+        app:layout_constraintTop_toTopOf="@id/profile_imageView"
+        app:layout_constraintBottom_toBottomOf="@id/profile_imageView"/>
 
     <EditText
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_width="match_parent"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginTop="30dp"
         android:id="@+id/firstNameText"
+        android:fontFamily="@font/comic_neue_bold"
+        android:background="@android:drawable/editbox_background_normal"
         android:hint="FirstName"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintTop_toBottomOf="@id/profile_imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
 
     <EditText
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_width="match_parent"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginTop="50dp"
         android:id="@+id/lastNameText"
+        android:fontFamily="@font/comic_neue_bold"
+        android:background="@android:drawable/editbox_background_normal"
         android:hint="LastName"
         app:layout_constraintTop_toBottomOf="@+id/firstNameText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,10 +64,12 @@
     <EditText
         android:id="@+id/userNameText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
+        android:fontFamily="@font/comic_neue_bold"
+        android:background="@android:drawable/editbox_background_normal"
         android:hint="UserName(Optional)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,30 +78,31 @@
     <EditText
         android:id="@+id/ageText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
+        android:fontFamily="@font/comic_neue_bold"
+        android:background="@android:drawable/editbox_background_normal"
         android:hint="D.O.B(Date Of Birth)"
-        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userNameText" />
-
 
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Confirm Details"
-        android:textSize="20sp"
-        android:textAllCaps="false"
-        app:cornerRadius="15dp"
         android:backgroundTint="@color/purple"
         android:fontFamily="@font/comic_neue_bold"
-        app:layout_constraintTop_toBottomOf="@+id/ageText"
+        android:onClick="confirmDetails"
+        android:text="Confirm Details"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        app:cornerRadius="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/ageText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
