--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Settings" />
-    <item android:title="Log Out" />
+    <item android:title="Settings"
+        android:id="@+id/app_settings"/>
+    <item android:title="Log Out"
+        android:id="@+id/app_logOut"/>
     <item
         android:id="@+id/app_bar_search"
         android:icon="@android:drawable/ic_menu_search"
