--- a/app/src/main/res/layout/user_chat_sample.xml
+++ b/app/src/main/res/layout/user_chat_sample.xml
@@ -9,7 +9,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/face"
-        android:id="@+id/profile_pic"
+        android:id="@+id/chat_profile_pic"
         android:layout_marginStart="2dp"
         android:layout_marginTop="6dp"
         android:padding="3dp"/>
@@ -27,8 +27,8 @@
             android:text="UserName"
             android:fontFamily="@font/comic_neue_bold"
             android:textColor="@color/black"
-            android:id="@+id/userNameText"
-            android:padding="1dp"
+            android:id="@+id/chatNameText"
+            android:paddingLeft="5dp"
             android:layout_marginTop="8dp"
             android:textStyle="bold"
             android:textSize="19sp"
@@ -40,7 +40,7 @@
             android:text="message"
             android:id="@+id/messageText"
             android:fontFamily="@font/comic_neue_bold"
-            android:padding="1dp"
+            android:paddingLeft="5dp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="17sp"/>
