--- a/app/src/main/res/layout/user_contact_card.xml
+++ b/app/src/main/res/layout/user_contact_card.xml
@@ -17,25 +17,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/face"
-            android:id="@+id/user_profile_img"
+            android:id="@+id/contact_profile_img"
             android:scaleType="centerCrop"/>
 
         <TextView
+            android:id="@+id/new_contact_icon"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
-            android:text="New"
-            android:id="@+id/new_contact_icon"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/border"
             android:fontFamily="@font/comic_neue_bold"
-            />
+            android:gravity="center"
+            android:text="New"
+            android:textColor="@color/white" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="UserName"
-            android:id="@+id/userNameText"
+            android:id="@+id/chatNameText"
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="17sp"
