--- a/app/src/main/res/layout/user_friend_request.xml
+++ b/app/src/main/res/layout/user_friend_request.xml
@@ -42,15 +42,15 @@
         android:layout_toEndOf="@id/user_request_profile_image"/>
 
     <TextView
+        android:id="@+id/user_request_courseNameId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CourseName"
-        android:fontFamily="@font/comic_neue_bold"
+        android:layout_below="@id/user_request_usernameId"
         android:layout_marginStart="5dp"
-        android:id="@+id/user_request_courseNameId"
-        android:textColor="@color/black"
         android:layout_toEndOf="@id/user_request_uniName"
-        android:layout_below="@id/user_request_usernameId"/>
+        android:fontFamily="@font/comic_neue_bold"
+        android:text="CourseName"
+        android:textColor="@color/black" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -81,14 +81,14 @@
         android:layout_marginEnd="9dp"
         android:layout_alignTop="@id/user_request_usernameId"
         android:layout_alignParentEnd="true"
+        android:gravity="center"
         android:text="Accept"
-        android:textAllCaps="false"
         android:fontFamily="@font/comic_neue_bold"
-        app:icon="@drawable/ic_add_icon"
-        app:backgroundTint="@color/purple"
-        app:cornerRadius="19dp"
-        app:background="@drawable/btn_selector"
-        />
+        android:backgroundTint="@color/purple"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:drawableStart="@drawable/ic_add_icon"
+        app:cornerRadius="14dp"/>
 
 
 
