--- a/app/src/main/res/drawable/mg_incoming_extra.xml
+++ b/app/src/main/res/drawable/mg_incoming_extra.xml
@@ -6,7 +6,7 @@
 
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <corners android:radius="100dp" />
+            <corners android:radius="10dp" />
             <padding
                 android:bottom="1px"
                 android:left="1px"
@@ -47,8 +47,8 @@
 
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_200" />
-            <corners  android:radius="100dp" />
+            <solid android:color="#D6D6D8" />
+            <corners  android:radius="40dp" />
         </shape>
     </item>
 </layer-list>
