--- a/app/src/main/res/drawable/mg_outing.xml
+++ b/app/src/main/res/drawable/mg_outing.xml
@@ -47,8 +47,8 @@
 
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="#D6D6D8" />
-            <corners android:bottomRightRadius="0dp" android:radius="100dp" />
+            <solid android:color="@color/purple_200" />
+            <corners android:bottomRightRadius="0dp" android:radius="40dp" />
         </shape>
     </item>
 
