--- a/app/src/main/res/layout/message_incoming.xml
+++ b/app/src/main/res/layout/message_incoming.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -9,7 +8,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/mg_incoming"
         android:gravity="center"
-        android:id="@+id/message_incoming_extra_layout"
+        android:id="@+id/message_incoming_layout"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
@@ -28,7 +27,7 @@
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:padding="10dp"
-            android:text="hiii helllo \n hhhhhhhhhhhh"
+            android:text="hiii helllo"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -38,9 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12:12"
+        android:textStyle="bold"
         android:id="@+id/message_incoming_timestamp"
-        android:layout_below="@id/message_incoming_extra_layout"
+        android:layout_below="@id/message_incoming_layout"
         android:visibility="visible"
-        android:layout_alignStart="@id/message_incoming_extra_layout"
+        android:layout_alignStart="@id/message_incoming_layout"
         />
 </RelativeLayout>
