--- a/app/src/main/res/layout/message_incoming_extra.xml
+++ b/app/src/main/res/layout/message_incoming_extra.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -38,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12:12"
+        android:textStyle="bold"
         android:id="@+id/message_incoming_extra_timestamp"
         android:layout_below="@id/message_incoming_extra_layout"
         android:visibility="visible"
