--- a/app/src/main/res/layout/message_outgoing.xml
+++ b/app/src/main/res/layout/message_outgoing.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/mg_outing"
         android:gravity="center"
-        android:id="@+id/message_outgoing_extra_layout"
+        android:id="@+id/message_outgoing_layout"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -27,7 +27,7 @@
             android:id="@+id/message_outgoing_text"
             android:text="hiii helllo hhhh"
             android:textSize="18sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:padding="10dp"
             android:gravity="center"/>
 
@@ -37,10 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12:12"
+        android:textStyle="bold"
         android:id="@+id/message_outgoing_timestamp"
         android:layout_marginEnd="10dp"
-        android:layout_below="@id/message_outgoing_extra_layout"
+        android:layout_below="@id/message_outgoing_layout"
         android:visibility="visible"
-        android:layout_alignEnd="@id/message_outgoing_extra_layout"
+        android:layout_alignEnd="@id/message_outgoing_layout"
         />
 </RelativeLayout>
