--- a/app/src/main/res/layout/user_feed_sample.xml
+++ b/app/src/main/res/layout/user_feed_sample.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="3dp"
+    android:layout_margin="2dp"
+    android:background="@drawable/white_grey_border">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
@@ -37,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:id="@+id/feed_time"
             android:fontFamily="@font/comic_neue_bold"
             android:text="0h"
             android:textSize="18sp"/>
@@ -55,6 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:textSize="16sp"
+            android:id="@+id/feed_message"
             android:layout_marginStart="2dp"
             android:text="message"
             android:fontFamily="@font/comic_neue_bold"/>
@@ -72,13 +78,28 @@
 
 
         <ImageView
-            android:layout_width="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_like_icon"/>
+            android:padding="1dp"
+            android:layout_weight="1"
+            android:id="@+id/feed_like"
+            android:src="@drawable/ic_like_icon"
+            android:clickable="true"
+            android:focusable="true"
+            app:tint="@color/reaction_slt"
+
+            />
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:clickable="true"
+            android:id="@+id/feed_reaction"
+            android:focusable="true"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_reaction_icon" />
 
         <ImageView
             android:layout_width="wrap_content"
