--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_search_loc"
         android:title="search" />
 
+    <item android:id="@+id/notifications"
+        android:icon="@drawable/ic_notifications_icon"
+        android:title="Buzz"/>
+
     <item android:id="@+id/friend_list"
         android:icon="@drawable/ic_contacts_list"
         android:title="Friends"/>
