--- a/app/src/main/res/layout/user_feed_sample.xml
+++ b/app/src/main/res/layout/user_feed_sample.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:text="username"
             android:id="@+id/feed_username"
+            android:textColor="@color/black"
             android:layout_marginStart="2dp"
             android:layout_weight="1"
             android:fontFamily="@font/comic_neue_bold"
@@ -60,10 +61,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:textSize="16sp"
+            android:textColor="@color/black"
             android:id="@+id/feed_message"
             android:layout_marginStart="2dp"
             android:text="message"
             android:fontFamily="@font/comic_neue_bold"/>
+
 
     </LinearLayout>
 
