--- a/app/src/main/res/menu/reaction_menu.xml
+++ b/app/src/main/res/menu/reaction_menu.xml
@@ -5,19 +5,19 @@
     <item
         android:id="@+id/laughing_reaction"
         android:icon="@drawable/laughing"
-        android:title="laugh_react"
+        android:title="laugh"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/love_reaction"
         android:icon="@drawable/love"
-        android:title="love_react"
+        android:title="love"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/cool_reaction"
         android:icon="@drawable/cool"
-        android:title="cool_react"
+        android:title="cool"
         app:showAsAction="always" />
 
 </menu>
