--- a/app/src/main/res/layout/message_incoming_extra.xml
+++ b/app/src/main/res/layout/message_incoming_extra.xml
@@ -3,6 +3,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:id="@+id/message_incoming_img"
+        android:visibility="gone"
+
+        android:layout_alignParentStart="true"
+        />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +30,9 @@
         android:layout_alignParentStart="true">
 
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/message_incoming_extra_text"
             android:layout_width="wrap_content"
@@ -42,5 +58,17 @@
         android:layout_below="@id/message_incoming_extra_layout"
         android:visibility="visible"
         android:layout_alignStart="@id/message_incoming_extra_layout"
+        />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12:12"
+        android:textStyle="bold"
+        android:id="@+id/message_incoming_img_timestamp"
+        android:layout_below="@id/message_incoming_img"
+        android:visibility="gone"
+        android:layout_alignStart="@id/message_incoming_img"
         />
 </RelativeLayout>
