--- a/app/src/main/res/layout/message_outgoing_extra.xml
+++ b/app/src/main/res/layout/message_outgoing_extra.xml
@@ -3,6 +3,18 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:id="@+id/message_outgoing_img"
+        android:layout_alignParentEnd="true"/>
+
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,5 +55,18 @@
         android:layout_below="@id/message_outgoing_extra_layout"
         android:visibility="visible"
         android:layout_alignEnd="@id/message_outgoing_extra_layout"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12:12"
+        android:textStyle="bold"
+        android:id="@+id/message_outgoing_img_timestamp"
+        android:layout_marginEnd="10dp"
+        android:layout_below="@id/message_outgoing_img"
+        android:visibility="gone"
+
+        android:layout_alignParentEnd="true"
         />
 </RelativeLayout>
