--- a/app/src/main/res/layout/message_incoming_extra.xml
+++ b/app/src/main/res/layout/message_incoming_extra.xml
@@ -5,13 +5,14 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
         android:id="@+id/message_incoming_img"
-        android:visibility="gone"
+
 
         android:layout_alignParentStart="true"
         />
@@ -22,7 +23,7 @@
         android:background="@drawable/mg_incoming_extra"
         android:gravity="center"
         android:id="@+id/message_incoming_extra_layout"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
 
@@ -37,12 +38,12 @@
             android:id="@+id/message_incoming_extra_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:padding="10dp"
+            android:padding="5dp"
             android:text="hiii helllo \n hhhhhhhhhhhh"
             android:textColor="@color/black"
             android:textSize="18sp" />
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:text="12:12"
         android:textStyle="bold"
+        android:layout_marginStart="15dp"
         android:id="@+id/message_incoming_extra_timestamp"
         android:layout_below="@id/message_incoming_extra_layout"
         android:visibility="visible"
