--- a/app/src/main/res/layout/message_outgoing_extra.xml
+++ b/app/src/main/res/layout/message_outgoing_extra.xml
@@ -6,11 +6,12 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:scaleType="centerCrop"
         android:id="@+id/message_outgoing_img"
         android:layout_alignParentEnd="true"/>
 
@@ -20,28 +21,28 @@
         android:layout_height="wrap_content"
         android:background="@drawable/mg_outing_extra"
         android:gravity="center"
+        android:padding="2dp"
         android:id="@+id/message_outgoing_extra_layout"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-
+        android:layout_marginEnd="10dp"
         android:layout_alignParentEnd="true">
 
 
         <TextView
+            android:id="@+id/message_outgoing_extra_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/message_outgoing_extra_text"
+            android:gravity="center"
+            android:padding="5dp"
             android:text="hiii helllo"
-            android:textSize="18sp"
             android:textColor="@color/white"
-            android:padding="10dp"
-            android:gravity="center"/>
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
@@ -51,7 +52,7 @@
         android:text="12:12"
         android:textStyle="bold"
         android:id="@+id/message_outgoing_extra_timestamp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="15dp"
         android:layout_below="@id/message_outgoing_extra_layout"
         android:visibility="visible"
         android:layout_alignEnd="@id/message_outgoing_extra_layout"
